# cPlusPlus

./: .gitignore  README.md
CMake/multi_dir/multi_makefile/: CMakeLists.txt  main
CMake/multi_dir/multi_makefile/other/: CMakeLists.txt  foo.cpp
CMake/multi_dir/single_makefile/: CMakeLists.txt  config.h.in  main
CMake/multi_dir/single_makefile/foo_dir/: foo.cpp  foo.hpp
CMake/multi_dir/single_makefile/func_dir/: func.cpp  func.hpp
CMake/multi_dir/single_makefile/main_dir/: main.cpp
CMake/single_dir/: CMakeLists.txt  Makefile_single_dir  main.cpp
CMake/template/: multi_Makefile__multiDir
MakeFile/makefile_multi_dir/multi_makefile/: Makefile  main
MakeFile/makefile_multi_dir/multi_makefile/main_dir/: Makefile  main.cpp
MakeFile/makefile_multi_dir/multi_makefile/other/: Makefile
MakeFile/makefile_multi_dir/single_makefile/: Makefile  single_Makefile__multiDir
MakeFile/makefile_multi_dir/single_makefile/main_dir/: main.cpp
MakeFile/makefile_multi_dir/single_makefile/other/: foo.cpp
MakeFile/makefile_single_dir/: Makefile  foo.hpp
c++/destructor/: destructor  destructor.cpp
c++/enum/: Makefile  enum  enum.cpp
c++/ex2/: -o  ex2  ex2.cpp  ex2.ooooo
c++/ex2/src/: ex2  ex2.cpp  rech  rechnung.cpp
c++/ex3/: add.c  add.h  ex3  ex3.c  ex3.ooo  my_lib.h  sub.c  sub.h  testmyso
c++/ex4/: test.cpp
c++/function/: Makefile  fun  fun.cpp
c++/header/: A.cpp  A.hpp  B.cpp  B.hpp  C.cpp  C.hpp  Makefile  main.cpp  out
c++/inherit/: Makefile  class  class.cpp
c++/iterator/: main  main.cpp  vitual_deconstcotr
c++/operator/: Makefile  operator  operator.cpp
c++/pointer/: Makefile  pointer  pointer.cpp
c++/preprocessor/: Makefile  test.cpp
c++/recursion/: Makefile  recursion  recursion.cpp
c++/vector/: Makefile  test.cpp
c++/virtual/: Makefile  main  main.cpp  v_table  v_table.cpp  virtual  virtual.cpp
